obake/tests/ui/bad_inherits.stderr
error: `#[obake(inherit)]` can only be applied to fields with `#[obake::versioned]` types
  --> $DIR/bad_inherits.rs:10:13
   |
10 |     #[obake(inherit)]
   |             ^^^^^^^

error: `#[obake(inherit)]` can only be applied to fields with `#[obake::versioned]` types
  --> $DIR/bad_inherits.rs:18:17
   |
18 |         #[obake(inherit)]
   |                 ^^^^^^^
